update sidebar  on flist; make layout ui helper for display table list and sidebar
