# src/shared/api/ApiResponse.ts
@@ -10,14 +10,26 @@ export interface ApiResponseSingle<T> {
 
 export interface ApiResponseList<T> {
     data: T[];
-    total: number;
     error?: ApiError;
+    meta?: ApiMeta;
 }
 
 export interface ApiError {
     message: string;
     code: number;
     stack?: string;
+}
+
+export interface ApiMeta {
+    page: number
+    limit: number
+    total: number
+    links?: {
+        details?: string
+    }
+    entity?: {
+        primaryKey: string
+    }
 }
 
 
